Many changes to tblog code.  Database update needed:
1) Added summary of failed nodes is os_setup.  The cause of the error is now
classified as "user" if it is only user images that failed and the user
image failed on every pc of a particular type.  Otherwise I leave the cause
as "unknown" since it is really hard to tell what the real cause is.

2) Raised the confidence threshold for most errors so that they will appear
on the top.

3) Added a special error when an experiment is canceled.  The cause is
"canceled" and testbed-ops won't see these errors.

4) Fixed a bug in assign_wrapper where it will incorrectly report "This
experiment cannot be instantiated on this testbed..." when really the user
canceled the swapin.

5) Fixed a bug where os_setup errors where being incorrectly reported as
assign errors.  This happens when os_setup fails for some reason and
tbswap tries again, but the second time around there are not enough nodes.
So the last error is coming from assign even though the true cause of the
error is due to failed nodes.  The fix for this involved added a new column
to the log table, "attempt", which will be 1 for the first attempt and then
incremented for each new attempt.  tblog_find_error will then simply ignore
any errors with "attempt > 1".

6) Also fixed a potential problem when there is an error during the cleanup
phase by adding another column "cleanup".  tblog_find_error will
also ignore any errors with the cleanup bit set.

--- a/tbsetup/assign_wrapper.in
+++ b/tbsetup/assign_wrapper.in
@@ -798,11 +798,6 @@ if ($plabcount && (keys(%virt_nodes) == $plabcount)) {
 
 TBDebugTimeStamp("assign_loop started");
 while (1) {
-    # Check cancel flag before continuing. 
-    TBGetCancelFlag($pid, $eid, \$canceled);
-    fatal("Cancel flag set; aborting assign run!")
-	if ($canceled);
-
     print "Assign Run $currentrun\n";
 
     #
@@ -957,7 +952,7 @@ sub RunAssign ()
 		    kill('TERM', -$pgrp);
 		    waitpid($childpid, 0);
 
-		    print "Cancel flag set; aborting assign run!\n";
+		    fatal("Cancel flag set; aborting assign run!");
 		    return -1;
 		}
 		# Loop again to reap child above before exit.
@@ -977,7 +972,7 @@ sub RunAssign ()
     # Check cancel flag before continuing. 
     TBGetCancelFlag($pid, $eid, \$canceled);
     if ($canceled) {
-	tbnotice("Cancel flag set; aborting assign run!\n");
+	fatal("Cancel flag set; aborting assign run!");
 	return -1;
     }
 
